[gd_scene load_steps=7 format=3 uid="uid://10gt8y7a3au2"]

[ext_resource type="PackedScene" uid="uid://buwtt0qxxv75y" path="res://scenes/button.tscn" id="1_60fnl"]
[ext_resource type="Script" uid="uid://dsg0jntvrqx4w" path="res://scripts/controller.gd" id="1_eq701"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e06ql"]

[sub_resource type="CylinderMesh" id="CylinderMesh_60fnl"]
material = SubResource("StandardMaterial3D_e06ql")
top_radius = 0.05
bottom_radius = 0.05

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eq701"]

[sub_resource type="BoxMesh" id="BoxMesh_um401"]
material = SubResource("StandardMaterial3D_eq701")
size = Vector3(2, 1, 0.05)

[node name="Controller" type="Node3D"]
script = ExtResource("1_eq701")

[node name="Pole" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
mesh = SubResource("CylinderMesh_60fnl")

[node name="Panel" type="MeshInstance3D" parent="Pole"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.07)
mesh = SubResource("BoxMesh_um401")

[node name="ThetaUp" parent="Pole/Panel" instance=ExtResource("1_60fnl")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, 0.25, 0.05)

[node name="ThetaDown" parent="Pole/Panel" instance=ExtResource("1_60fnl")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.5, -0.25, 0.05)

[node name="PhiLeft" parent="Pole/Panel" instance=ExtResource("1_60fnl")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.75, 0, 0.05)

[node name="PhiRight" parent="Pole/Panel" instance=ExtResource("1_60fnl")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.25, 0, 0.05)

[node name="Launch" parent="Pole/Panel" instance=ExtResource("1_60fnl")]
transform = Transform3D(3, 0, 0, 0, -1.31134e-07, -3, 0, 3, -1.31134e-07, 0.5, 0, 0.1)

[connection signal="input_deselected" from="Pole/Panel/ThetaUp" to="." method="_on_theta_up_input_deselected"]
[connection signal="input_selected" from="Pole/Panel/ThetaUp" to="." method="_on_theta_up_input_selected"]
[connection signal="input_deselected" from="Pole/Panel/ThetaDown" to="." method="_on_theta_down_input_deselected"]
[connection signal="input_selected" from="Pole/Panel/ThetaDown" to="." method="_on_theta_down_input_selected"]
[connection signal="input_deselected" from="Pole/Panel/PhiLeft" to="." method="_on_phi_left_input_deselected"]
[connection signal="input_selected" from="Pole/Panel/PhiLeft" to="." method="_on_phi_left_input_selected"]
[connection signal="input_deselected" from="Pole/Panel/PhiRight" to="." method="_on_phi_right_input_deselected"]
[connection signal="input_selected" from="Pole/Panel/PhiRight" to="." method="_on_phi_right_input_selected"]
[connection signal="input_deselected" from="Pole/Panel/Launch" to="." method="_on_launch_input_deselected"]
[connection signal="input_selected" from="Pole/Panel/Launch" to="." method="_on_launch_input_selected"]
